ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src tests

EXTRA_DIST  =   TODO                    \
	            include                 \
	            tests/gaussian.ini      \
                tests/gaussian.py       \
	            tests/rosenbrock.ini    \
                tests/rosenbrock.py     \
	            tests/himmelblau.ini    \
                tests/himmelblau.py     \
                tests/cmb.ini			\
				tests/clean_tests

