ACLOCAL_AMFLAGS = -I m4 -Wall
SUBDIRS = src examples

EXTRA_DIST  =   template.ini                \
                TODO                        \
	            include                     \
	            examples/gaussian.ini       \
                examples/gaussian.py        \
	            examples/rosenbrock.ini     \
                examples/rosenbrock.py      \
	            examples/himmelblau.ini     \
                examples/himmelblau.py      \
                examples/cmb.ini			\
				examples/clean_tests
